Bug 1583161 - Remove the border from the FxA avatar in about:logins since it was cropping the avatar and looked odd in Dark mode. r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D48633

UltraBlame original commit: 2f0ab2cdb24054774ee30c2b08b30edc901c5adf

--- a/browser/components/aboutlogins/content/components/fxaccounts-button.css
+++ b/browser/components/aboutlogins/content/components/fxaccounts-button.css
@@ -224,23 +224,6 @@ size
 cover
 ;
 border
-:
-1px
-solid
-var
-(
--
--
-in
--
-content
--
-border
--
-color
-)
-;
-border
 -
 radius
 :
@@ -253,70 +236,6 @@ width
 height
 :
 32px
-;
-}
-.
-fxaccounts
--
-avatar
--
-button
-:
-hover
-.
-fxaccount
--
-avatar
-{
-border
--
-color
-:
-var
-(
--
--
-in
--
-content
--
-border
--
-hover
-)
-;
-}
-.
-fxaccounts
--
-avatar
--
-button
-:
-hover
-:
-active
-.
-fxaccount
--
-avatar
-{
-border
--
-color
-:
-var
-(
--
--
-in
--
-content
--
-border
--
-active
-)
 ;
 }
 .
